fixed extra padding problem

--- a/style.css
+++ b/style.css
@@ -62,7 +62,6 @@ body {
   opacity: 0;
   visibility: hidden;
   transform: translateY(10px);
-  padding: 10px 0;
   background-color: rgba(181, 181, 181, 1);
   border-radius: 0 0 10px 10px;
   transition:
@@ -101,7 +100,6 @@ body {
   opacity: 0;
   visibility: hidden;
   transform: translateX(10px);
-  padding: 20px;
   background-color: rgba(181, 181, 181, 1);
   border-radius: 0 10px 10px 0;
   transition:
@@ -127,4 +125,20 @@ body {
     rgba(0, 0, 0, 0) 0%,
     rgba(255, 255, 255, 1) 100%
   );
+}
+.menu > .menu-item {
+  position: relative;
+  border: none;
+}
+.menu > .menu-item::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 20%;
+  height: 60%;
+  width: 1px;
+  background: rgb(143, 142, 142);
+}
+.menu > .menu-item:last-child::after {
+  display: none;
 }
